# motiontracker

./: CMakeLists.txt  Doxyfile  Doxyfile.in  README.markdown  main.cc  utils.hh  webcam.cc  webcam.hh
blender/: CMakeLists.txt  blender-plugin.py  motiontracker-blender.py  pymotiontracker.hh  python-module.cc
cmake/: FindOpenCV.cmake
examples/: CMakeLists.txt  calibrator.cc  chessboardfinder.cc  colorcalibrator.cc  colorcross.cc  colortracker.cc  edgefinder.cc  glchessboardtracker.cc  gputest.cc  main.cc  opencvtest.cc  posit_test.cc  tracker.cc
examples/legacy/: CMakeLists.txt  chessboardfinder.cc  glchessboardtracker.cc
include/: CMakeLists.txt  motiontracker.hh  utils.hh  webcam.hh
src/: CMakeLists.txt  calibrationparameters.cc  cameraparameters.cc  motiontracker.cc  receivers.cc  webcam.cc
